Removed default player, computer, and result display

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </div>
 
   <div class="choiceDisplayContainer">
-    <div id="playerDisplay">PLAYER CHOSE: </div>
-    <div id="computerDisplay">COMPUTER CHOSE: </div>
+    <div id="playerDisplay"></div>
+    <div id="computerDisplay"></div>
     <div id="resultDisplay"></div>
   </div>
 
