cleaned up JS by removing onclick handlers and established better seperation of concerns

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main>
     <!-- Title -->
-    <h1>ROCK | PAPER | SCISSORS</h1>
+    <h1>ROCK PAPER SCISSORS</h1>
     <!-- Choice Buttons -->
     <section class="choicesContainer">
       <button data-choice="ROCK">ROCK</button>
